--- a/jquery-calendar/index.html
+++ b/jquery-calendar/index.html
@@ -1,195 +1,237 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>日历-calendar</title>
-		<link rel="shortcut icon" href="/public/image/favicon.png">
-		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
-		<style type="text/css">
-			.calendar{
-				width:350px;
-				margin:0 auto 20px;
-				color:#333;
-			}
-			.calendar table{
-				width:100%;
-				table-layout:fixed;
-				border-collapse: collapse;
-				border-spacing: 0;
-				text-align: center;
-			}
-			.calendar caption{
-				line-height: 30px;
-				text-align: center;
-				border-bottom: 1px solid #ebebeb;
-    			margin-bottom: 5px;
-			}
-			.calendar caption span{
-				margin: 0 10px;
-			}
-			.calendar caption a{
-				color:#666;
-				margin:0 5px;
-				text-decoration: none;
-			}
-			.calendar td,.calendar th{
-				height: 30px;
-				line-height: 30px;
-				text-align: center;
-			}
-			.calendar td span{
-				display: block;
-			    width: 30px;
-			    margin: 0 auto;
-			    cursor: pointer;
-			}
-			.calendar .widget-back{
-				float: right;
-			}
-			.calendar .widget-today span{
-				font-weight: bold;
-			}
-			.calendar .widget-disabled span{
-				color:#999;
-			}
-			.calendar .widget-highlight span{
-				background: #f7b82e;
-				color:#fff;
-				border-radius: 30px;
-			}
-			.calendar .widget-active span{
-				background: #39c;
-				color:#fff;
-				border-radius: 30px;
-			}
-		</style>
-		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
-		<script type="text/javascript" src="/code/jquery.calendar.js"></script>
-	</head>
-	<body>
-		<div class="header">
-			<div class="inner">
-				<div class="mod-head">
-					<div class="bd">
-						<a class="btn" href="https://github.com/mumuy/widget" rel="nofollow" target="_blank" title="Github">
-							<svg aria-hidden="true" class="octicon" height="20" title="GitHub " version="1.1" viewBox="0 0 16 16" width="24"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
-							<span>Github</span>
-						</a>
-						<a class="btn" href="https://passer-by.com/" target="_blank">个人网站</a>
-                        <a class="btn" href="/">返回首页</a>
-					</div>
-				</div>
-			</div>
-		</div>
-        <div class="container">
-			<div class="calendar calendar1"></div>
-			<div class="code">
-				<p>今天到明年元旦可选，选择一个区间</p>
-<pre>
-var year = (new Date()).getFullYear()+1;
-$('.calendar1').calendar({
-	limitRange:[['today',year+'0101']],
-	isRange:true
-});
-</pre>
-			</div>
-			<script type="text/javascript">
-				var year = (new Date()).getFullYear()+1;
-				$('.calendar1').calendar({
-					limitRange:[['today',year+'0101']],
-					isRange:true
-				});
-			</script>
-			<div class="calendar calendar2"></div>
-			<div class="code">
-				<p>选择某一天</p>
-<pre>
-$('.calendar2').calendar({
-	'onSelect':function(range){
-		alert('你选择了'+range[0]['year']+'-'+range[0]['month']+'-'+range[0]['day']);
-	}
-});
-</pre>
-			</div>
-			<script type="text/javascript">
-				$('.calendar2').calendar({
-					'onSelect':function(range){
-						alert('你选择了'+range[0]['year']+'-'+range[0]['month']+'-'+range[0]['day']);
-					}
-				});
-			</script>
-			<div class="calendar calendar3"></div>
-			<div class="code">
-				<p>指定日期高亮显示，如：当前月份的15和16号</p>
-<pre>
-var today = new Date();
+<html lang="zh-CN">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+        <title>日历-calendar</title>
+        <link rel="shortcut icon" href="../static/image/favicon.png">
+        <link rel="stylesheet" type="text/css" href="../static/style/common.css">
+        <style type="text/css">
+            .calendar-container{
+                width:350px;
+                margin:0 auto 20px;
+                color:#333;
+            }
+            .calendar-container table{
+                width:100%;
+                min-width: 320px;
+                table-layout:fixed;
+                border-collapse: collapse;
+                border-spacing: 0;
+                text-align: center;
+            }
+            .calendar-container caption{
+                line-height: 30px;
+                text-align: center;
+                border-bottom: 1px solid #ebebeb;
+                margin-bottom: 5px;
+            }
+            .calendar-container caption span{
+                margin: 0 10px;
+            }
+            .calendar-container caption a{
+                color:#666;
+                margin:0 5px;
+                text-decoration: none;
+            }
+            .calendar-container td,.calendar-container th{
+                padding: 5px 10px;
+                height: 24px;
+                line-height: 24px;
+                text-align: center;
+            }
+            .calendar-container td span{
+                display: block;
+                width: 30px;
+                margin: 0 auto;
+                cursor: pointer;
+            }
+            .calendar-container .widget-back{
+                float: right;
+            }
+            .calendar-container .widget-today span{
+                font-weight: bold;
+            }
+            .calendar-container .widget-disabled span{
+                color:#999;
+            }
+            .calendar-container .widget-highlight span{
+                background: #f7b82e;
+                color:#fff;
+                border-radius: 30px;
+            }
+            .calendar-container .widget-active span{
+                background: #39c;
+                color:#fff;
+                border-radius: 30px;
+            }
+        </style>
+        <script type="text/javascript" src="../static/script/jquery.min.js"></script>
+        <script type="text/javascript" src="../code/jquery.calendar.js"></script>
+    </head>
+    <body>
+        <div class="wrapper">
+            <header>
+                <div class="mod-head">
+                    <div class="inner">
+                        <div class="bd">
+                            <div class="logo">
+                                <a href="/"><img src="../static/image/public/logo.png" width="180" height="64" alt="路人甲"></a>
+                            </div>
+                            <nav>
+                            </nav>
+                            <div class="operation">
+                                <a class="btn" href="https://passer-by.com" target="_blank">个人网站</a>
+                                <a class="btn" href="https://github.com/mumuy/widget/" rel="nofollow" target="_blank" title="Github">
+                                    <svg aria-hidden="true" class="octicon" title="GitHub " version="1.1" viewBox="0 0 16 16" width="24" height="24"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
+                                    <span>Github</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div class="container">
+                <div class="inner">
+                    <section class="mod-panel">
+                        <div class="hd">
+                            <h3 class="title">日历-calendar</h3>
+                        </div>
+                        <div class="bd">
+                            <div class="calendar-container calendar-container-1"></div>
+                            <div class="code">
+                                <p>今天到明年元旦可选，选择一个区间</p>
+<code><pre>var year = (new Date()).getFullYear()+1;
+$('.calendar-container-1').calendar({
+    limitRange:[['today',year+'0101']],
+    isRange:true
+});</pre></code>
+                            </div>
+                            <script type="text/javascript">
+                                var year = (new Date()).getFullYear()+1;
+                                $('.calendar-container-1').calendar({
+                                    limitRange:[['today',year+'0101']],
+                                    isRange:true
+                                });
+                            </script>
+                            <div class="calendar-container calendar-container-2"></div>
+                            <div class="code">
+                                <p>选择某一天</p>
+<code><pre>$('.calendar-container-2').calendar({
+    'onSelect':function(range){
+        alert('你选择了'+range[0]['year']+'-'+range[0]['month']+'-'+range[0]['day']);
+    }
+});</pre></code>
+                            </div>
+                            <script type="text/javascript">
+                                $('.calendar-container-2').calendar({
+                                    'onSelect':function(range){
+                                        alert('你选择了'+range[0]['year']+'-'+range[0]['month']+'-'+range[0]['day']);
+                                    }
+                                });
+                            </script>
+                            <div class="calendar-container calendar-container-3"></div>
+                            <div class="code">
+                                <p>指定日期高亮显示，如：当前月份的15和16号</p>
+<code><pre>var today = new Date();
 var year = today.getFullYear();
 var month = today.getMonth()+1;
 var string = year+(month>9?month:'0'+month);
-$('.calendar3').calendar({
-	highlightRange:[[string+'15',string+'16']]
+$('.calendar-container-3').calendar({
+    highlightRange:[[string+'15',string+'16']]
 });
-</pre>
-			</div>
-			<script type="text/javascript">
-				var today = new Date();
-				var year = today.getFullYear();
-				var month = today.getMonth()+1;
-				var string = year+(month>9?month:'0'+month);
-				$('.calendar3').calendar({
-					highlightRange:[[string+'15',string+'16']]
-				});
-			</script>
-			<div class="example">
-				<div class="call">
-					<h1>调用方法：</h1>
-					<p>$(selector).calendar(options);</p>
-				</div>
-				<h2>options参数</h2>
-				<table>
-					<thead>
-						<tr>
-							<th width="150">参数</th>
-							<th width="120">默认值</th>
-							<th>说明</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>prefix</td>
-							<td>'widget'</td>
-							<td>生成日历的class前缀</td>
-						</tr>
-						<tr>
-							<td>isRange</td>
-							<td>false</td>
-							<td>是否选择范围</td>
-						</tr>
-						<tr>
-							<td>limitRange</td>
-							<td>[]</td>
-							<td>有效选择区域的范围(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
-						</tr>
-						<tr>
-							<td>highlightRange</td>
-							<td>[]</td>
-							<td>指定日期范围高亮(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
-						</tr>
-						<tr>
-							<td>onChange(day)</td>
-							<td>[空]</td>
-							<td>当前选中月份修改时触发,day为当月第一天,包含月份及年份信息</td>
-						</tr>
-						<tr>
-							<td>onSelect([start,end])</td>
-							<td>[空]</td>
-							<td>选择日期时触发,start为开始时间,end为结束时间,包含月份及年份信息</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-		<script type="text/javascript" src="https://passer-by.com/static/script/projects.js"></script>
-		<script type="text/javascript" src="https://jquerywidget.com/public/script/stat.js"></script>
-	</body>
+</pre></code>
+                            </div>
+                            <script type="text/javascript">
+                                var today = new Date();
+                                var year = today.getFullYear();
+                                var month = today.getMonth()+1;
+                                var string = year+(month>9?month:'0'+month);
+                                $('.calendar-container-3').calendar({
+                                    highlightRange:[[string+'15',string+'16']]
+                                });
+                            </script>
+                            <div class="example">
+                                <div class="code">
+                                    <h1>调用方法：</h1>
+                                    <p>$(selector).calendar(options);</p>
+                                </div>
+                                <div class="table-outer">
+                                    <h2>options参数</h2>
+                                    <div class="table-inner">
+                                        <table>
+                                            <thead>
+                                                <tr>
+                                                    <th width="150">参数</th>
+                                                    <th width="120">默认值</th>
+                                                    <th>说明</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>prefix</td>
+                                                    <td>'widget'</td>
+                                                    <td>生成日历的class前缀</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>isRange</td>
+                                                    <td>false</td>
+                                                    <td>是否选择范围</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>limitRange</td>
+                                                    <td>[]</td>
+                                                    <td>有效选择区域的范围(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>highlightRange</td>
+                                                    <td>[]</td>
+                                                    <td>指定日期范围高亮(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>onChange(day)</td>
+                                                    <td>[空]</td>
+                                                    <td>当前选中月份修改时触发,day为当月第一天,包含月份及年份信息</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>onSelect([start,end])</td>
+                                                    <td>[空]</td>
+                                                    <td>选择日期时触发,start为开始时间,end为结束时间,包含月份及年份信息</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <script type="text/javascript" src="https://passer-by.com/static/script/projects.js"></script>
+                </div>
+            </div>
+            <footer>
+                <div class="mod-fixedbar">
+                    <div class="bd">
+                        <ul>
+                            <li>
+                                <a class="gotop" href="javascript:;" rel="nofollow">
+                                    <img src="../static/image/public/icon-gotop.png" width="24" height="24" alt="回到顶部">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="mod-foot">
+                    <div class="bd">
+                        <p>
+                            <span>Copyright &copy; 2025</span>
+                            <a href="/">jquerywidget.com</a>
+                            <span>版权所有</span>
+                        </p>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <script type="text/javascript" src="../static/script/common.js"></script>
+        <script type="text/javascript" src="../static/script/stat.js"></script>
+    </body>
 <html>
